--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Would be frontend..</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
-    <h1>Would be frontend..</h1>
+    <h1>What do you think?</h1>
+    <form onsubmit="saveComment();return false">
+        <textarea id="text"></textarea>
+        <input type="text" id="author">        
+        <input type="submit" value="Save">
+    </form>
+    <section id="comments"></section>
 </body>
 </html>
