--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>What do you think?</h1>
+    <h6>Updated 24/1 10:11 </h6>
     <form onsubmit="saveComment();return false">
         <textarea id="text"></textarea>
         <input type="text" id="author">        
